# pipeline-production-hub

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/alembic/: README  env.py
backend/alembic/versions/: 2ac41a0f7e9b_add_deleted_at_to_files.py  7b6c2d1e4f90_add_project_client_and_type.py  868c807dfacb_updadete_code_create_o_more.py  89f144418787_create_users_roles_user_roles.py  93fcc9a81cf5_create_users_table.py  a1b2c3d4e5f6_add_archived_at_to_core_entities.py  a1b2c3d4e5f6_add_tags.py  a2b3c4d5e6f7_add_notifications.py  a8b9c0d1e2f3_add_playlists.py  b2c3d4e5f6a1_add_time_logs.py  b2c3d4e5f6a7_add_pipeline_tasks.py  b9c0d1e2f3a4_add_departments.py  baa1b24e0ffb_merge_heads.py  c1e7a5f9b312_create_projects_shots_assets.py  c3d4e5f6a1b2_add_deliveries.py  c3d4e5f6a7b8_add_entity_field_gaps.py  c64e1f84daf0_add_production_number_naming_rules_path_.py  c8d9f1a2b3e4_add_episodes_sequences_and_shot_sequence.py  d4f0a6c1b7a2_create_webhooks_table.py  d5e6f7a8b9c0_add_notes.py  e4a8f8d2c6b1_expand_area2_models.py  e6f7a8b9c0d1_add_versions.py  f3b19d4a6c2e_create_files_table.py  f7a8b9c0d1e2_add_shot_asset_links.py
backend/app/: main.py
backend/app/core/: active_users.py  config.py  dependencies.py  exceptions.py  logging.py  login_rate_limit.py  metrics.py  rate_limit.py  security.py  token_blacklist.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  asset.py  delivery.py  department.py  episode.py  file.py  note.py  notification.py  pipeline_task.py  playlist.py  project.py  role.py  sequence.py  shot.py  shot_asset_link.py  status_log.py  tag.py  time_log.py  user.py  user_role.py  version.py  webhook.py
backend/app/repositories/: asset_repository.py  delivery_repository.py  department_repository.py  episode_repository.py  file_repository.py  note_repository.py  notification_repository.py  pipeline_task_repository.py  playlist_repository.py  project_repository.py  sequence_repository.py  shot_asset_link_repository.py  shot_repository.py  status_log_repository.py  tag_repository.py  task_queue_repository.py  time_log_repository.py  user_repository.py  (+3 more)
bruno/: README.md  enviment.json
bruno/01 project/: bruno.json
bruno/02 shots/: bruno.json
bruno/03 episodes/: bruno.json
bruno/04 assets/: bruno.json
bruno/05 sequences/: bruno.json
bruno/06 create series project/: 03 Me.bru  04 Create Project.bru  05 Create Episode A.bru  06 Create Episode B.bru  07 Create Sequence A.bru  08 Create Sequence B.bru  09 Create Shot A.bru  10 Create Shot B.bru  11 Create Asset A.bru  12 Create Asset B.bru  13 Scaffold Project.bru  14 Create Shot Task A.bru  15 Create Shot Task B.bru  16 Create Asset Task A.bru  17 Create Asset Task B.bru  18 Create Shot Version.bru  19 Create Asset Version.bru  20 Create Project Note.bru  21 Create Shot Note.bru  22 Create Asset Note.bru  23 Create Task Note.bru  24 Create Playlist.bru  25 Add Shot Version To Playlist.bru  26 Add Asset Version To Playlist.bru  27 Create Department A.bru  28 Create Department B.bru  29 List Project Playlists.bru  30 List Project Versions.bru  31 List Departments.bru  32 Delete Department A.bru  33 Delete Department B.bru  34 Delete Project.bru  bruno.json
bruno/07 files/: bruno.json
bruno/18 shot asset links/: bruno.json
docs/: README.md  dcc-integration.md  demo-script.md  interview-prep.md  quality-tools.md  testing-workflow.md  vfx_hub_schema.md
docs/architecture/: 01-overview.md  02-backend-layers.md  03-postgresql.md  04-redis.md  05-auth-rbac.md  06-files-storage.md  07-background-jobs-webhooks.md  08-production-features.md  09-alembic-migrations.md  10-configuration.md  11-error-handling-api-conventions.md  12-observability.md  13-docker-development.md  README.md
examples/dcc/: README.md  _api.py  _workflow.py  artist_publish.py  houdini_publish.py  maya_publish.py  nuke_publish.py  task_launcher_gui.py
smoke_tests/: context.py  helpers.py  runner.py  test_01_health.py  test_02_auth.py  test_03_users.py  test_04_departments.py  test_05_projects.py  test_06_episodes.py  test_07_sequences.py  test_08_shots.py  test_09_assets.py  test_10_shot_asset_links.py  test_11_pipeline_templates.py  test_12_pipeline_tasks.py  test_13_versions.py  test_14_notes.py  test_15_tags.py  test_16_time_logs.py  test_17_deliveries.py  test_18_playlists.py  test_19_webhooks.py  test_20_notifications.py  test_21_background_tasks.py  test_22_files.py  test_23_auth_logout.py  test_24_pipeline_path_isolation.py
test/: conftest.py  test_assets_endpoints.py  test_auth.py  test_deliveries_endpoints.py  test_departments_endpoints.py  test_episode_sequence_endpoints.py  test_episodes_endpoints.py  test_exceptions.py  test_file_repository.py  test_files_endpoints.py  test_health_endpoints.py  test_metrics_endpoints.py  test_notes_endpoints.py  test_notifications_endpoints.py  test_pipeline_integration.py  test_pipeline_tasks_endpoints.py  test_playlists_endpoints.py  test_playlists_service.py  test_projects_endpoints.py  test_projects_service.py  test_rate_limit_middleware.py  test_rbac.py  test_s3_live.py  test_security.py  test_sequences_endpoints.py  test_service_direct.py  test_shot_asset_links_endpoints.py  test_shots_endpoints.py  test_shots_workflow.py  test_storage_backends.py  test_tags_endpoints.py  test_tasks_endpoints.py  test_time_logs_endpoints.py  test_users_endpoints.py  test_versions_endpoints.py  test_webhooks_endpoints.py
(+362 files in other folders)
