[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "pipeline-production-hub"
version = "0.1.0"
description = "Production pipeline management system for VFX studios"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",

    # Auth
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "passlib[bcrypt]>=1.7",

    # Cache / queue
    "redis[hiredis]>=5.0",

    # Observability
    "structlog>=24.2",
    "prometheus-fastapi-instrumentator>=7.1",
    "prometheus-client>=0.20",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-passlib",
    "types-redis",
]

test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # async test client for FastAPI
    "factory-boy>=3.3",
    "faker>=25.0",
]

# ---------------------------------------------------------------------------
# Hatch environments (optional — mirrors the groups above)
# ---------------------------------------------------------------------------
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
features = ["dev", "test"]

[tool.hatch.envs.default.scripts]
serve  = "uvicorn app.main:app --reload --app-dir backend"
lint   = "ruff check ."
fmt    = "ruff format ."
types  = "mypy backend"
test   = "pytest -v --cov=backend --cov-report=term-missing"
check  = ["lint", "types", "test"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default args (FastAPI Depends)
    "TC001",  # type-checking import organization is too noisy for this codebase
    "TC002",  # type-checking import organization is too noisy for this codebase
    "TC003",  # type-checking import organization is too noisy for this codebase
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
mypy_path = ["backend"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["alembic.*", "asyncpg.*", "jose.*", "passlib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["test"]
addopts         = "-v --tb=short"
filterwarnings  = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning", "ignore::pytest.PytestUnraisableExceptionWarning"]
markers = [
    "projects: project endpoint and reporting tests",
    "episodes: episode endpoint tests",
    "sequences: sequence endpoint tests",
    "shots: shot endpoint and workflow tests",
    "assets: asset endpoint tests",
    "deliveries: delivery endpoint and lifecycle tests",
    "departments: department endpoint and membership tests",
    "users: user management and role assignment tests",
    "time_logs: time tracking and project summary tests",
    "notes: note creation and threaded discussion tests",
    "notifications: notification lifecycle tests",
    "tags: tag management and entity attachment tests",
    "shot_asset_links: shot-asset relationship tests",
    "versions: version submission and review state tests",
    "playlists: playlist and dailies session tests",
    "pipeline_tasks: pipeline template and task workflow tests",
    "webhooks: webhook lifecycle and event subscription tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["backend"]
omit     = ["*/migrations/*", "*/alembic/*", "*/__pycache__/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 80
